@@ -48,3 +48,7 @@
 [2019-04-24 14:16:57.232] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 14:16:57.232] [logger] [info] Material 0 was added to project A Great Movie
 [2019-04-24 14:16:57.232] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
+[2019-04-24 14:17:45.708] [logger] [info] Material 0 was added to project A Great Movie
